more config files

--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "<%= namespace.toLowerCase() %>",
+  "name": "<%= projectName %>",
   "version": "0.0.0",
   "description": "A worker project.",
   "main": "dist",
