--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "extends": ["eslint:recommended"],
     "env": {
         "node": true,
-        "commonjs": true
+        "commonjs": true,
+        "mocha": true
     },
     "rules": {
         "no-console": "off"
