--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   ],
   "dependencies": {
     "chalk": "^1.1.3",
-    "yeoman-generator": "^0.24.1"
+    "mocha": "^3.0.2",
+    "should": "^11.1.0",
+    "yeoman-assert": "^2.2.1",
+    "yeoman-generator": "^0.24.1",
+    "yeoman-test": "^1.4.0"
   }
 }
