--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "chalk": "^1.1.3",
+    "gulp-clean": "^0.3.2",
     "mocha": "^3.0.2",
     "should": "^11.1.0",
     "yeoman-assert": "^2.2.1",
